Add the /config/import_user_list endpoint to import a csv user list. Add the button to import a csv user list in user menu.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,8 +10,9 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - PGDATA=postgres
+      - POSTGRES_DB=general
     ports:
-      - "5484:5432"
+      - "5432:5432"
     networks:
       - custom
 networks:
